force-app/main/default/objects/CPT_to_Progress_Note_Mapping__c/fields/CPT_Code_Display__c.field-meta.xml
<CustomField>
    <fullName>CPT_Code_Display__c</fullName>
    <description>Used for flows to display in picklist</description>
    <formula>CPT_Code__r.Code + &quot; &quot; + CPT_Code__r.VCC_Description__c</formula>
    <label>CPT Code Display</label>
    <type>Text</type>
</CustomField>