force-app/main/default/objects/CPT_to_Progress_Note_Mapping__c/fields/CPT_Code_Id__c.field-meta.xml
<CustomField>
    <fullName>CPT_Code_Id__c</fullName>
    <description>Used for flows for value in picklist</description>
    <formula>CPT_Code__r.Id</formula>
    <label>CPT Code Id</label>
    <type>Text</type>
</CustomField>