force-app/main/default/objects/CPT_to_Progress_Note_Mapping__c/fields/PC_LIP__c.field-meta.xml
<CustomField>
    <fullName>PC_LIP__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Specifies if the CPT Code specific to the Provider Connect is for LIP (Licensed Independent Practitioner)</description>
    <inlineHelpText>User is a Provider Connect Licensed Independent Practitioner (LIP).</inlineHelpText>
    <label>PrC LIP</label>
    <type>Checkbox</type>
</CustomField>