force-app/main/default/objects/CPT_to_Progress_Note_Mapping__c/fields/Progress_Note_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Progress_Note_Record_Type__c</fullName>
    <description>The list of Record Types on Progress Note which need a mapping to Code Set

- Provider Connect referring the field for Code Sets</description>
    <label>Progress Note Record Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tele-EC MP Chart Review Progress Note</fullName>
            </value>
            <value>
                <fullName>Tele-EC MP Virtual Visit Progress Note</fullName>
            </value>
            <value>
                <fullName>Tele-EC Nurse Progress Note</fullName>
            </value>
            <value>
                <fullName>Provider Connect Progress Note</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>