force-app/main/default/objects/CPT_to_Progress_Note_Mapping__c/listViews/Tele_EC_with_Detail.listView-meta.xml
<ListView>
    <fullName>Tele_EC_with_Detail</fullName>
    <columns>NAME</columns>
    <columns>CPT_Code__c</columns>
    <columns>CPT_Code_Display__c</columns>
    <columns>CPT_Code_Id__c</columns>
    <columns>Progress_Note_Record_Type__c</columns>
    <columns>Progress_Note_Visit_Type__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>Tele-EC with Detail</label>
</ListView>